@@ -265,7 +265,7 @@ static void update_dUstar_emfield_SOR2_forward(np_t *np, gl_t *gl, long flux, zo
   MPI_Comm_rank(MPI_COMM_WORLD, &thisrank);
   MPI_Pack_size( 1, MPI_DOUBLE, MPI_COMM_WORLD, &packsize );
   
-  buffersize = 2*(zone.ie-zone.is)*(zone.je-zone.js)if3DL(*(zone.ke-zone.ks)) * (MPI_BSEND_OVERHEAD + packsize);
+  buffersize = min(INT_MAX,2*(zone.ie-zone.is)*(zone.je-zone.js)if3DL(*(zone.ke-zone.ks)) * (MPI_BSEND_OVERHEAD + packsize));
   buffer = (double *)malloc( buffersize );
   mpivars=(double *)malloc(sizeof(double));
 
